--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ buildNumber.properties
 .mvn/timing.properties
 *.iml
 .idea/
+.cvs
+.xlsx
 
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
