--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ buildNumber.properties
 .mvn/timing.properties
 *.iml
 .idea/
-.cvs
-.xlsx
+*.cvs
+*.xlsx
 
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
